This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
4/23/20: Fixed problems in hole finding: a large memory leak, a potential
crash, reloading montages as integers, laying out points in groups.  Also
made it runnable from script commands with the dialog not open and prevented
multiple conversions of found points to Nav points.

4/23/20: Added routine, dialog, and script commands for combining a regular
array of points into a subset set up for multi-shot acquisition.

4/20/20: Added script commands ReportItemImageCoords and CircularSubareaMean.

4/16/20: Prevented vacuum gauge calls in scope update for non-FEI scopes
(In 3.7).

4/16/20: Added script commands ReportItemAcquire, SetItemAquire, and
ChangeItemNote.

3/26/20: Fixed two problems with reloading montage overview in hole finder.

3/19/20: Added a hole-finding routine and dialog.

3/3/20: Added dialog and script command for taking image snapshots.

2/28/20: Disabled post-actions by default for K3.

2/28/20: Fixed Shift N operation in Navigator table.

2/28/20: Added entry to protect a beam shift calibration from being replaced
by a new one in the same mag range.

2/26/20: Increased camera timeout for continuous mode images to allow long
exposure times (In 3.7).

2/3/20: SEM_3-8-0beta8
2/3/20: Fixed image shift changes when changing mag with "Apply image shift
offsets" or "Center shift on tilt axis" selected, broken 6/6/19.

2/3/20: Fixed wild defocus changes when doing reset image shift at non-zero
tilt, broken 8/21/19.

2/3/20: SEM_3-7-13
2/3/20: Fixed ReportLensFLCStatus output (In 3.7).

2/3/20: Allowed quoted strings to be read from a file with ReadLineToArray.

1/29/20: Added camera property to apply the minimum binning available for
direct detectors to other cameras.
