@@ -320,6 +320,7 @@ class DLL_IM_EX CEMscope
   GetSetMember(BOOL, SkipAdvancedScripting);
   GetSetMember(BOOL, ChangeAreaAtZeroIS);
   GetSetMember(int, HitachiDoesBSforIS);
+  GetSetMember(float, TiltSpeedFactor);
 
   static void SetJeolIndForMagMode(int inVal);
   static int GetJeolIndForMagMode();
@@ -648,6 +649,7 @@ private:
   double mStartForMinMoveY;   // for setting backlash
   BOOL mMovingStage;          // Flag that we started a stage move
   BOOL mBkgdMovingStage;      // Flag that stage move was started on background channel
+  float mTiltSpeedFactor;     // If set, use as speed factor for tilt when none supplied
   float mIllumAreaLowLimit;   // Limits for illuminated area
   float mIllumAreaHighLimit;
   float mIllumAreaLowMapTo;   // Values that lower and upper limits map to
