@@ -193,6 +193,7 @@ BOOL_PROP_TEST("MontageAutosaveLog", mWinApp->mMontageController->, AutosaveLog)
 FLOAT_PROP_TEST("JEOLStageMotorRounding", scope->, JeolStageRounding)
 FLOAT_PROP_TEST("JEOLStagePiezoRounding", scope->, JeolPiezoRounding)
 FLOAT_PROP_TEST("MaximumTiltAngle", scope->, MaxTiltAngle)
+FLOAT_PROP_TEST("TiltSpeedFactor", scope->, TiltSpeedFactor)
 INT_PROP_TEST("ScopeUpdateInterval", scope->, UpdateInterval)
 INT_PROP_TEST("LowDoseBeamNormDelay", scope->, LDBeamNormDelay)
 INT_PROP_TEST("PostProbeDelay", scope->, PostProbeDelay)
