@@ -2345,6 +2345,13 @@
             The default is 60 for Hitachi, otherwise 79.9; Titan needs 69.9.</TD>
         </TR>
         <TR VALIGN="top">
+          <TD>TiltSpeedFactor</TD>
+          <TD>Set a default tilting speed factor on systems that support varying the tilt 
+            speed, to be applied except when tilting with a
+            specific speed factor.&nbsp; See the description of speed factors for the
+            <a href="script_commands#tiltDuringRecord">tiltDuringRecord</a> command.</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD>StageMoveDelay</TD>
           <TD>Delay time in milliseconds from moving the stage to taking any kind of 
             picture, to be added to a built-in 800 msec delay before exposure starts. 
